mobile nav was overlapping which is fixed

--- a/src/assets/scss/Header.scss
+++ b/src/assets/scss/Header.scss
@@ -83,7 +83,7 @@
             border: none;
             color: white;
             background-color: $primary-color;
-            padding: 1rem;
+            padding: .5rem;
             z-index: 9;
         }
 
